[package]
name = "debug_radio_module"
version = "0.1.0"
authors = ["Brad Campbell <bradjc@umich.edu>"]

[profile.dev]
panic = "abort"
lto = true
opt-level = 0
debug = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
cortexm4 = { path = "../../tock/arch/cortex-m4" }
capsules = { path = "../../tock/capsules" }
sam4l = { path = "../../tock/chips/sam4l" }
kernel = { path = "../../tock/kernel" }
signpost_drivers = { path = "../../signpost_drivers" }
signpost_hil = { path = "../../signpost_hil" }
