[package]
name = "microwave_radar_module"
version = "0.1.0"
authors = ["Yifan Hao <haoyifan@umich.edu>"]

[profile.dev]
panic = "abort"
lto = true
opt-level = 0
debug = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
#common = { path = "../../tock/src/common" }
cortexm4 = { path = "../../tock/arch/cortex-m4" }
capsules = { path = "../../tock/capsules" }
#hil = { path = "../../tock/src/hil" }
#main = { path = "../../tock/src/main" }
sam4l = { path = "../../tock/chips/sam4l" }
#support = { path = "../../tock/src/support" }
kernel = { path = "../../tock/kernel" }
signpost_drivers = { path = "../../signpost_drivers" }
signpost_hil = { path = "../../signpost_hil" }
