[package]
name = "controller"
version = "0.1.0"
authors = ["Brad Campbell <bradjc@umich.edu>"]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
rust-libcore = "*"
common = { path = "../../tock/src/common" }
cortexm4 = { path = "../../tock/src/arch/cortex-m4" }
drivers = { path = "../../tock/src/drivers" }
hil = { path = "../../tock/src/hil" }
main = { path = "../../tock/src/main" }
sam4l = { path = "../../tock/src/chips/sam4l" }
support = { path = "../../tock/src/support" }
signpost_drivers = { path = "../../signpost_drivers" }
